fix "chat" overlay button on mobile

--- a/src/scss/_common/_components.scss
+++ b/src/scss/_common/_components.scss
@@ -580,12 +580,6 @@ input[type="radio"]:checked + label span {
                 width: auto;
                 min-width: 40%;
             }
-            .usage--money {
-                .field-input {
-                    @include span-columns(4);
-                    max-width: 300px;
-                }
-            }
             @include tablet {
                 padding: 2em;
                 .content-col {
@@ -597,11 +591,6 @@ input[type="radio"]:checked + label span {
                     }
                     &.four {
                         width: 100%;
-                    }
-                }
-                .usage--money {
-                    .field-input {
-                        @include span-columns(5);
                     }
                 }
             }
@@ -616,11 +605,6 @@ input[type="radio"]:checked + label span {
                     }
                     &.four {
                         width: 100%;
-                    }
-                }
-                .usage--money {
-                    .field-input {
-                        @include span-columns(6);
                     }
                 }
             }
@@ -1049,6 +1033,15 @@ input[type="radio"]:checked + label span {
             border-top-right-radius: 0;
             padding: 1em 4em;
             padding-left: 5em;
+
+            @include mobile {
+                width: 78px;
+                white-space: nowrap;
+                overflow: hidden;
+                padding-left: 78px;
+                padding-right: 0;
+                z-index: 99;
+            }
         }
     }
 }
